# panorama-sidekick

./: pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: main.yml
panorama_sidekick/: cli.py  devicegroup.py  firewall.py  panorama.py  show.py
testing/: utils.py
testing/test_data/: show_devicegroups.xml
tests/: conftest.py  test_show.py
