[tool.poetry]
name = "panorama-sidekick"
version = "0.1.0"
description = ""
authors = ["John Torres <johnnyjamestorres@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "panorama_sidekick"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.1"

[tool.poetry.scripts]
pano = "panorama_sidekick.cli:cli"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
